# lilli

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ENV_TEMPLATE.txt  PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USE_CASES.md  WORKFLOW_EXAMPLES.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: base_agent.py  data_agent.py  email_agent.py  inventory_agent.py  sql_agent.py
alembic/: env.py
alembic/versions/: 49b32bd99bcc_create_customers_and_orders.py
api/: lilli.py  websocket.py
app/: package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/chat/: chat-input.tsx  message-bubble.tsx  message-list.tsx  welcome-screen.tsx
app/components/ui/: button.tsx  input-group.tsx
app/hooks/: use-chat.ts
config/: settings.py
core/: app.py  llm.py  llm_ops.py  logger.py  orchestrator.py  prompts.py  registry.py  setup.py
docs/: alchemy.md  email_agent.md  langgraph.md  supabase.md
infra/: Dockerfile.agent  Dockerfile.app  Dockerfile.ui  docker-compose.yml
models/: __init__.py  api.py  customer.py  models.py  order.py
scripts/: run_migrations.py
services/: database.py  database_service.py  resend_service.py  supabase.py  supabase_service.py  task_service.py  websocket_service.py
supabase/migrations/: 001_create_customers_and_orders.sql
tools/: base_tool.py  execute_query.py  time_tool.py  weather_tool.py
tools/email/: __init__.py  draft_email.py  get_recipients.py  send_email.py
tools/inventory/: __init__.py  add_inventory.py  remove_inventory.py  search_inventory.py  update_inventory.py  view_movements.py
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/chat/: message-bubble.tsx  typing-indicator.tsx
ui/hooks/: use-chat.ts
utils/: llm.py
