[project]
name = "lilli"
version = "0.1.0"
description = "Lilli AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
    "termcolor",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pytz",
    "resend",
    "supabase>=2.27.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "alembic>=1.18.0",
    "langgraph>=1.0.6",
    "langchain-openai>=1.1.7",
    "langchain-core>=1.2.7",
]

[project.scripts]
lilli = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "config", "services", "utils"]
